fix(NavigationBurger): move menu out of container
fixes IE11 display and simplifies code

--- a/Components/NavigationBurger/_style.scss
+++ b/Components/NavigationBurger/_style.scss
@@ -5,7 +5,6 @@
 
 [is='flynt-navigation-burger'] {
   $navigation-height: 75px;
-  $drop-shadow: 0 2px 4px rgba(0, 0, 0, 0.16);
 
   height: $navigation-height;
 
@@ -16,7 +15,7 @@
   .container {
     align-items: center;
     background-color: $color-background;
-    box-shadow: $drop-shadow;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.16);
     display: flex;
     height: $navigation-height;
     justify-content: space-between;
